--- a/manifests/image_processor.yaml
+++ b/manifests/image_processor.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: kube-face-secret
+type: Opaque
+data:
+  mysql_userpassword: cm9vdDpwYXNzd29yZDEyMw==
+  mysql_password: cGFzc3dvcmQxMjM=
 ---
 apiVersion: apps/v1
 kind: Deployment
